plang/testing/logs/false-incorrect/131/program131.p.p
nZa (YBgJr) VO5.
t K Nvo.
kOZXj :- oI7J (BawD) x.
niB.


uS.

k6 (nUNlU (zapUu (Rqu55) ky z (Zh)) mD (b9TxI (u (gUuy (XWYg9) (RKrh))))) (L9Ox).

m0Mqa (EeG8E) yRIZd M :- ((e256 (Y) (uILN (q CS6GA (EQ)) UaAv aVE) wBHpq); uEkq HSTj (Ykui), cu xr (S) (mw (FmET) (R) (smt (c0sh8) kq) (h WeV DWi d)) Ch).
a3p2.
xFoc :- (lFFzq y); n3D, dLmOT ycz (LtH) (Rnb), (qPFu xihK c NIz), ywiPH MUA (rv828 (qm xe) B).


l (jFe sYl BDwY g7) r (S) :- mZ (wl lyz0q Cs9 sU) (kCEP7) nd6, y3wz (O) x; e RXf; ((inddC (BP8U) (zKX (nW hpo AAq) (h Zc))); (on2 F XQf (USDC) hLbZH)).


sK ug4a usB.


saO6 (hVE (ta) awNG) u8Wf6 (f dfe Fr) :- (rbN x rN).


jF ALmh (eo (pZr U3xXC) oHX w) uo29Q.

ap (Fxe) L (F) :- (l (Kt) (Ty) SR); ((c530 ENF (iCx7) nu b), nk (T) IukWR (jeFv g1NXw GFHAH OvO4), us7rQ (nP5yn gYc3U (OLoQK)) (EaF0C)).

zc.

? (b4nz (Ri7)).

